Fix failover integration tests
Use absolute paths for the rootfolders in the change of the mts destination

Also clean up some of the asserts, using assertEquals instead of assertTrue

Use StandardCharests.UTF_8 instead of the string